add html preprocessor

--- a/index.html.template
+++ b/index.html.template
@@ -1,4 +1,3 @@
-<!-- Generated from index.html.template. Do not edit. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -242,11 +241,7 @@
                 <div class="row text-center">
                     <p></p>
                     <p><strong>Past events</strong></p>
-<div><div class="col-md-9"><a class="titleLink" href="events/10_28.jpg" target="_blank">Intergenerational Intimacy: A Redefinition of Filial Piety (Speaker: Yunxiang Yan)</a></div><div class="col-md-2"><a class="noteLink" href="http://uclac3s.com" target="_blank">(Notes for 10.28)</a></div></div>
-<div><div class="col-md-9"><a class="titleLink" href="events/9_30.jpg" target="_blank">Expeditions toward Terra Incognita (Unexplored Territory) (Speaker: Chih-Ming Ho)</a></div><div class="col-md-2"><a class="noteLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=209024651&idx=1&sn=7b4e7bb9478ab9fb76267013b61bf447#rd" target="_blank">(Notes for 9.30)</a></div></div>
-<div><div class="col-md-9"><a class="titleLink" href="events/5_14.jpg" target="_blank">How to Build a Successful Career in US? (Speaker: Wenyuan Shi)</a></div><div class="col-md-2"><a class="noteLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205823118&idx=1&sn=915e5f7ca6fad639061ab14381cade25#rd" target="_blank">(Notes for 5.14)</a></div></div>
-<div><div class="col-md-9"><a class="titleLink" href="events/4_21.jpg" target="_blank">How to Present Your Research? (Speaker: Feng Guo, Dezhi Kang)</a></div><div class="col-md-2"><a class="noteLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205093160&idx=2&sn=85db27c6b76925b679b0dd82c0eea537#rd" target="_blank">(Notes for 4.21)</a></div></div>
-<div><div class="col-md-9"><a class="titleLink" href="events/4_10.jpg" target="_blank">Can we Design Our Career? (Speaker: Jason Cong)</a></div><div class="col-md-2"><a class="noteLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=204799904&idx=2&sn=f6861f52fe0fd743c2a64bf8b8d326ec#rd" target="_blank">(Notes for 4.10)</a></div></div>
+                    <!-- events content, do not remove this line -->
                 </div>
             </div>
         </section>
@@ -331,12 +326,7 @@
             </div>
             <div class="container">
                 <div class="row text-center">
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=204449108&idx=2&sn=cbf2627c6b2af329cc1b20bd68472d81#rd">回归之路（一）</a></div>
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=204449108&idx=3&sn=50a9eb8ed68189e5e9b63726b437e052#rd">回归之路（二）</a></div>
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205183676&idx=2&sn=8f5b055595bb70e1f6f6dc22f1a541c6#rd">流浪者之歌（一）</a></div>
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205210738&idx=2&sn=b516765f8c1f0b011911ba1530fe0a1a#rd">流浪者之歌（二）</a></div>
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=205601699&idx=2&sn=97a1c8d0f48eb43ed01642e374b8ccac#rd">“留学故事系列”之三</a></div>
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=206903837&idx=1&sn=e5433f1d0cd005afe3b7fdd8987d2289#rd">“留学故事系列”之四: 科研内外的那点儿事</a></div>
+                    <!-- story content, do not remove this line -->
                 </div>
             </div>
             <script src="gallery/insert.js"></script>
@@ -360,12 +350,7 @@
             </div>
             <div class="container">
                 <div class="row text-center">
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=207434738&idx=2&sn=1f76c1b0b6b96177b469be47b6342039#rd">UCLA-C3S“西木咖啡馆”话题之一：博士生遇到实验不顺利该怎么办？</a></div>
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=207618384&idx=1&sn=a0e387d3e437bb1da8a279378314ce8a#rd">UCLA-C3S“西木咖啡馆”话题之二：癌症离我们有多远？</a></div>
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=207771727&idx=1&sn=7a6c326d704f1ef706509127313aca71#rd">UCLA-C3S“西木咖啡馆”话题之三：蛋白和多肽类药物该怎么用？</a></div>
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=208019264&idx=1&sn=50500bb8e0cb91836bc6cddf9ce8db6c#rd">UCLA-C3S“西木咖啡馆”话题之四：在美国念本科你快乐吗？（一） by 童晓蕙 （UCSD CSSA主席）</a></div>
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=208058149&idx=1&sn=288ca68ebb7ea0e833ce589ec0422a2f#rd">UCLA-C3S“西木咖啡馆”话题之四：在美国念本科你快乐吗？（二） by 童晓蕙 （UCSD CSSA主席）</a></div>
-<div class="col-md-12 marginbot-20"><a class="storyLink" href="http://mp.weixin.qq.com/s?__biz=MzAwOTI4NjAyNg==&mid=208293765&idx=1&sn=a24be45c1487ae5b7880f177a5ede731#rd">UCLA-C3S“西木咖啡馆”话题之五：如何治愈一颗受伤的心 by 高晨 （UCLA）</a></div>
+                    <!-- westwood cafe content, do not remove this line -->
                 </div>
             </div>
             <script src="gallery/insert.js"></script>
